--- a/data_analysis/Visualization/vaisul.ipynb
+++ b/data_analysis/Visualization/vaisul.ipynb
@@ -3,9 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# 데이터 시각화"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "----\r\n",
-    "### [ 출처 ] DATA STATION - 매일 10분 데이터 분석\r\n",
-    "### [ 홈페이지 ] : https://blog.naver.com/data_station/222493249123\r\n",
+    "### [ 참고자료 ] [DATA STATION - 매일 10분 데이터 분석](https://blog.naver.com/data_station/222493249123)\r\n",
+    "### [ 참고자료 ] : [Matplotlib Tutorial - 파이썬으로 데이터 시각화하기](https://wikidocs.net/book/5011)\r\n",
     "----"
    ],
    "metadata": {}
