20211014 Home Review Python for Data Analysis

--- a/data_analysis/Pandas/pandas_basic.ipynb
+++ b/data_analysis/Pandas/pandas_basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25259,13 +25259,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pivot Tables and Cross-Tabulation\n",
+    "## 피벗테이블과 교차일람표 - Pivot Tables and Cross-Tabulation\n",
     "< 참조 > [피벗테이블 - pd.pivot_table](https://wikidocs.net/46755)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25382,7 +25382,7 @@
        "     Yes     2.352941  3.030000  0.163863   19.190588"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25892,15 +25892,648 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>Fri</th>\n",
+       "      <th>Sat</th>\n",
+       "      <th>Sun</th>\n",
+       "      <th>Thur</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"11\" valign=\"top\">Dinner</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.137931</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.325733</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.139622</td>\n",
+       "      <td>0.162705</td>\n",
+       "      <td>0.168859</td>\n",
+       "      <td>0.159744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.171297</td>\n",
+       "      <td>0.148668</td>\n",
+       "      <td>0.207893</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">3</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.154661</td>\n",
+       "      <td>0.152663</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.144995</td>\n",
+       "      <td>0.152660</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">4</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.150096</td>\n",
+       "      <td>0.148143</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.117750</td>\n",
+       "      <td>0.124515</td>\n",
+       "      <td>0.193370</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">5</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.206928</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.106572</td>\n",
+       "      <td>0.065660</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.103799</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"10\" valign=\"top\">Lunch</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.181728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.223776</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.166005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.181969</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.158843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">3</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.187735</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.084246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.204952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">4</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.138919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yes</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.155410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.121389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <th>No</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.173706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "day                      Fri       Sat       Sun      Thur\n",
+       "time   size smoker                                        \n",
+       "Dinner 1    No      0.000000  0.137931  0.000000  0.000000\n",
+       "            Yes     0.000000  0.325733  0.000000  0.000000\n",
+       "       2    No      0.139622  0.162705  0.168859  0.159744\n",
+       "            Yes     0.171297  0.148668  0.207893  0.000000\n",
+       "       3    No      0.000000  0.154661  0.152663  0.000000\n",
+       "            Yes     0.000000  0.144995  0.152660  0.000000\n",
+       "       4    No      0.000000  0.150096  0.148143  0.000000\n",
+       "            Yes     0.117750  0.124515  0.193370  0.000000\n",
+       "       5    No      0.000000  0.000000  0.206928  0.000000\n",
+       "            Yes     0.000000  0.106572  0.065660  0.000000\n",
+       "       6    No      0.000000  0.000000  0.103799  0.000000\n",
+       "Lunch  1    No      0.000000  0.000000  0.000000  0.181728\n",
+       "            Yes     0.223776  0.000000  0.000000  0.000000\n",
+       "       2    No      0.000000  0.000000  0.000000  0.166005\n",
+       "            Yes     0.181969  0.000000  0.000000  0.158843\n",
+       "       3    No      0.187735  0.000000  0.000000  0.084246\n",
+       "            Yes     0.000000  0.000000  0.000000  0.204952\n",
+       "       4    No      0.000000  0.000000  0.000000  0.138919\n",
+       "            Yes     0.000000  0.000000  0.000000  0.155410\n",
+       "       5    No      0.000000  0.000000  0.000000  0.121389\n",
+       "       6    No      0.000000  0.000000  0.000000  0.173706"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tips.pivot_table('tip_pct', index=['time', 'size', 'smoker'],\n",
+    "                 columns='day', aggfunc='mean', fill_value=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 교차일람표 - Cross-Tabulations: Crosstab\n",
+    "교차일람표는 그룹 빈도를 계산하기 위한 피벗테이블의 특수한 경우이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from io import StringIO\n",
+    "data = \"\"\"\\\n",
+    "Sample  Nationality  Handedness\n",
+    "1   USA  Right-handed\n",
+    "2   Japan    Left-handed\n",
+    "3   USA  Right-handed\n",
+    "4   Japan    Right-handed\n",
+    "5   Japan    Left-handed\n",
+    "6   Japan    Right-handed\n",
+    "7   USA  Right-handed\n",
+    "8   USA  Left-handed\n",
+    "9   Japan    Right-handed\n",
+    "10  USA  Right-handed\"\"\"\n",
+    "data = pd.read_table(StringIO(data), sep='\\s+')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Handedness</th>\n",
+       "      <th>Left-handed</th>\n",
+       "      <th>Right-handed</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nationality</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Japan</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Handedness   Left-handed  Right-handed  All\n",
+       "Nationality                                \n",
+       "Japan                  2             3    5\n",
+       "USA                    1             4    5\n",
+       "All                    3             7   10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(data.Nationality, data.Handedness, margins=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>No</th>\n",
+       "      <th>Yes</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Dinner</th>\n",
+       "      <th>Fri</th>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sat</th>\n",
+       "      <td>45</td>\n",
+       "      <td>42</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sun</th>\n",
+       "      <td>57</td>\n",
+       "      <td>19</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thur</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Lunch</th>\n",
+       "      <th>Fri</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thur</th>\n",
+       "      <td>44</td>\n",
+       "      <td>17</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <th></th>\n",
+       "      <td>151</td>\n",
+       "      <td>93</td>\n",
+       "      <td>244</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "smoker        No  Yes  All\n",
+       "time   day                \n",
+       "Dinner Fri     3    9   12\n",
+       "       Sat    45   42   87\n",
+       "       Sun    57   19   76\n",
+       "       Thur    1    0    1\n",
+       "Lunch  Fri     1    6    7\n",
+       "       Thur   44   17   61\n",
+       "All          151   93  244"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab([tips.time, tips.day], tips.smoker, margins=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 시계열 - Time Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 날짜, 시간 자료형, 도구 - Date and Time Data Types and Tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-10-14 20:41:16.818942\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2021, 10, 14)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "print(now)\n",
+    "now.year, now.month, now.day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "926 days, 15:45:00\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "926\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "56700"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta = datetime(2011, 1, 7) - datetime(2008, 6, 24, 8, 15)\n",
+    "print(delta)\n",
+    "print('~'*40)\n",
+    "print(delta.days)\n",
+    "print('~'*40)\n",
+    "delta.seconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2011-01-19 00:00:00\n",
+      "2010-12-14 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# timedelta(일)\n",
+    "from datetime import timedelta\n",
+    "start = datetime(2011, 1, 7)\n",
+    "print(start + timedelta(12))\n",
+    "print(start - 2 * timedelta(12))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문자열을 datetime으로 변환하기 - Converting Between String and Datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2011-01-03 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'2011-01-03'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stamp = datetime(2011, 1, 3)\n",
+    "print(str(stamp))\n",
+    "stamp.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2011-01-03 00:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[datetime.datetime(2011, 7, 6, 0, 0), datetime.datetime(2011, 8, 6, 0, 0)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value = '2011-01-03'\n",
+    "print(datetime.strptime(value, '%Y-%m-%d'))\n",
+    "datestrs = ['7/6/2011', '8/6/2011']\n",
+    "[datetime.strptime(x, '%m/%d/%Y') for x in datestrs]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dateutil.parser import parse\n",
+    "parse('2011-01-03')"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "ec985c47769bd4263ef39dfc38121adde7928de2df74e4478a4bf19abc002598"
+   "hash": "9d3bae0a0f66551680ef8a166f6b92cc2774d5d7901f027deb7bb883ed06d5ae"
   },
   "kernelspec": {
    "display_name": "Python 3.8.8 64-bit ('base': conda)",
