--- a/Programming/Python/Python_Basic/Workspace/python_basic.ipynb
+++ b/Programming/Python/Python_Basic/Workspace/python_basic.ipynb
@@ -1246,6 +1246,60 @@
     "print(random.randint(1,21))\n",
     "#print(theater_module.price(3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pip install"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      " <body>\n",
+      "  <p>\n",
+      "   Some\n",
+      "   <b>\n",
+      "    bad\n",
+      "    <i>\n",
+      "     HTML\n",
+      "    </i>\n",
+      "   </b>\n",
+      "  </p>\n",
+      " </body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(\"<p>Some<b>bad<i>HTML\")\n",
+    "print(soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 내장함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input"
+   ]
   }
  ],
  "metadata": {
