--- a/Programming/Python/Python_Basic/Workspace/nado_opencv/02. 동영상 출력.ipynb
+++ b/Programming/Python/Python_Basic/Workspace/nado_opencv/02. 동영상 출력.ipynb
@@ -4,45 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 카메라 출력"
+    "# 2. 동영상 출력"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 동영상 파일 출력"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'cv2.VideoCapture' object has no attribute 'isOpended'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-36c0456a01c0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcap\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mVideoCapture\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 0번째 카메라 장치 (Device ID)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misOpended\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mexit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 프로그램 종료\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'cv2.VideoCapture' object has no attribute 'isOpended'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사용자 입력에 의해 종료합니다.\n"
      ]
     }
    ],
    "source": [
     "import cv2\n",
-    "cap = cv2.VideoCapture(0) # 0번째 카메라 장치 (Device ID)\n",
+    "cap = cv2.VideoCapture('video.mp4')\n",
     "\n",
-    "if not cap.isOpended():\n",
-    "    exit() # 프로그램 종료\n",
-    "\n",
-    "while True:\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:\n",
+    "while cap.isOpened(): # 동영상 파일이 올바로 열렸는지?\n",
+    "    ret, frame = cap.read() # ret : 성공여부, frame : 받아온 이미지(프레임)\n",
+    "    if not ret :\n",
+    "        print('더 이상 가져올 프레임이 없어요')\n",
     "        break\n",
-    "\n",
-    "    cv2.imshow('camera', frame)\n",
-    "    if cv2.waitKey(1) == ord('q'): # 사용자가 q를 입력하면\n",
+    "    cv2.imshow('video', frame)\n",
+    "    \n",
+    "    # if cv2.waitKey(1) == ord('q'): # 재생속도가 빠름\n",
+    "    if cv2.waitKey(25) == ord('q'):\n",
+    "        print('사용자 입력에 의해 종료합니다.')\n",
     "        break\n",
-    "\n",
-    "cap.release()\n",
-    "cv2.destoryAllWindows()"
+    "cap.release() # 자원 해제\n",
+    "cv2.destroyAllWindows() # 모든 창 닫기\n",
+    "        \n",
+    "    \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -54,7 +66,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e22b443d4a462610bbb3bb0fd2fbd617a36ac78e8b795270db94d44357032c35"
+   "hash": "8fac594bfae6525c0c41b4041d2d72effa188cc8ead05f81b1fab2bb098927fb"
   },
   "kernelspec": {
    "display_name": "Python 3.8.8 ('base')",
