20220313 Library Review Python OpenCV

--- a/Programming/Python/Python_Basic/Workspace/nado_openCV/18. 이미지 검출 (윤곽선).ipynb
+++ b/Programming/Python/Python_Basic/Workspace/nado_openCV/18. 이미지 검출 (윤곽선).ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     "        cv2.imwrite(f'card_crop_{idx}.png', crop) # 파일 저장\n",
     "        idx +=1\n",
     "\n",
-    "cv2.imshow('img', img)q\n",
+    "cv2.imshow('img', img)\n",
     "cv2.imshow('gray', gray)\n",
     "cv2.imshow('otsu', otsu)\n",
     "cv2.imshow('contour', target_img)\n",
