--- a/Programming/Python/Python_Basic/Workspace/nado_openCV/20. 얼굴 인식 캐릭터 쒸우기.ipynb
+++ b/Programming/Python/Python_Basic/Workspace/nado_openCV/20. 얼굴 인식 캐릭터 쒸우기.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,7 @@
     "\n",
     "# 동영상 파일 열기\n",
     "cap = cv2.VideoCapture('face_video.mp4')\n",
+    "#cap = cv2.VideoCapture(0)\n",
     "\n",
     "# 이미지 불러오기\n",
     "image_right_eye = cv2.imread('right_eye.png') # 100 x 100\n",
