--- a/Programming/Python/Python_Basic/Workspace/nado_opencv/03. 도형 그리기.ipynb
+++ b/Programming/Python/Python_Basic/Workspace/nado_opencv/03. 도형 그리기.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
     "\n",
     "cv2.rectangle(img, (100,100), (200,200), COLOR, THICKNESS) # 속이 빈 사각형\n",
     "# 그릴 우치, 왼쪽 위 좌표, 오른쪽 아래 조표, 색깔, 두께\n",
-    "cv2.rectangle(img, (300,100), (400,400), COLOR, cv2.FILLED ) # 속이 빈 사각형\n",
+    "cv2.rectangle(img, (300,100), (400,400), COLOR, cv2.FILLED ) # 속이 찬 사각형\n",
     "\n",
     "\n",
     "cv2.imshow('img', img)\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
