20220314 Office Review Pandas

--- a/data_analysis/Pandas/임시/02. 넘파이.ipynb
+++ b/data_analysis/Pandas/임시/02. 넘파이.ipynb
@@ -1075,10 +1075,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 30, 40])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# where 를 사용하면 더욱 간단히 표현\n",
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([10, 20, 30])\n",
+    "np.where(arr > 10, arr + 10, arr - 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 주가가 85000 이하로 떨어진 날은 며칠일까요?\n",
+    "lge = np.array([93000, 82400, 99100, 81000, 72300])\n",
+    "np.where(lge <= 85000, 1, 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = lge[lge <= 85000]\n",
+    "len(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 07) 함수와 메서드"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 함수와 메서드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "[12 16]\n",
+      "[ 1  5  9 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum 메서드\n",
+    "arr = np.arange(8).reshape(4,2)\n",
+    "print(arr.sum())\n",
+    "print(arr.sum(axis=0))\n",
+    "print(arr.sum(axis=1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 16])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3 38 10  4 29]\n",
+      "[[30  3 33 25 32]\n",
+      " [39 35 22  6 43]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# randint : 입력된 범위에서 임의의 정수를 반환\n",
+    "print(np.random.randint(46, size=5))\n",
+    "print(np.random.randint(46, size=(2,5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  5., 10.])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# linspce 함수 : 첫번째로 시작값, 두번째는 종료값, 세번째는 분할 지점의 수\n",
+    "x = np.linspace(0,10,3)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3]\n",
+      " [4 5 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(4)\n",
+    "b = np.arange(4, 8)\n",
+    "c = np.vstack([a, b])\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(4)\n",
+    "b = np.arange(4, 8)\n",
+    "c = np.hstack([a, b])\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
