--- a/data_analysis/imsi/06. 시계열.ipynb
+++ b/data_analysis/imsi/06. 시계열.ipynb
@@ -3682,7 +3682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3749,7 +3749,7 @@
        "4 -0.005769 -0.017778"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3768,7 +3768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3835,7 +3835,7 @@
        "4 -0.022684 -0.036337"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3850,7 +3850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3917,7 +3917,7 @@
        "4 -0.022684 -0.036337"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3928,6 +3928,512 @@
     "# pct_change 메서드를 사용하는 것이 좋습니다.\n",
     "\n",
     "df.pct_change(periods=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>삼성전자</th>\n",
+       "      <th>LG전자</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.013410</td>\n",
+       "      <td>1.008798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.007597</td>\n",
+       "      <td>1.004334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.984740</td>\n",
+       "      <td>0.967839</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       삼성전자      LG전자\n",
+       "0       NaN       NaN\n",
+       "1       NaN       NaN\n",
+       "2  1.013410  1.008798\n",
+       "3  1.007597  1.004334\n",
+       "4  0.984740  0.967839"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 삼성전자와 LG전자의 데이터로 보유 후 2일 뒤 매도하는 전략의 누적 수익률을 계산해 봅시다. \n",
+    "# pct_change로 인접한 두 값의 비율(수익률)을 얻어와서 원금 1을 더한 시리즈에 cumprod 메서드로 \n",
+    "# 누적수익률을 계산합니다. cumprod 메서드는 시리즈에 대해서 누적곱을 리턴합니다.\n",
+    "\n",
+    "yeild = df.pct_change(periods=2) + 1\n",
+    "yeild.cumprod()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\anaconda3\\lib\\site-packages\\openpyxl\\styles\\stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>종가</th>\n",
+       "      <th>시가</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>일자</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-02-15</th>\n",
+       "      <td>84200.0</td>\n",
+       "      <td>83800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-16</th>\n",
+       "      <td>84900.0</td>\n",
+       "      <td>84500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-17</th>\n",
+       "      <td>83200.0</td>\n",
+       "      <td>83900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-18</th>\n",
+       "      <td>82100.0</td>\n",
+       "      <td>83200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-19</th>\n",
+       "      <td>82600.0</td>\n",
+       "      <td>82300.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 종가       시가\n",
+       "일자                          \n",
+       "2021-02-15  84200.0  83800.0\n",
+       "2021-02-16  84900.0  84500.0\n",
+       "2021-02-17  83200.0  83900.0\n",
+       "2021-02-18  82100.0  83200.0\n",
+       "2021-02-19  82600.0  82300.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ss_ex_1.xlsx 엑셀 파일을 사용해서 각 분기의 시가 대비 일일 상승률(종가 기준)을 계산해 보겠습니다. \n",
+    "# read_excel함수로 데이터를 읽어오며, usecols 파라미터로 일자, 시가, 종가 컬럼만을 선택합니다. \n",
+    "# 날짜 컬럼을 데이터프레임의 인덱스로 지정하고 데이터는 일자를 기준으로 오름차순 정렬합니다.\n",
+    "# [ 그림 6.6.4 ]\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_excel(\"data/ss_ex_1.xlsx\", index_col=0, usecols=[0, 1, 4])\n",
+    "df.index = pd.to_datetime(df.index)\n",
+    "df = df.sort_index()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시가</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>일자</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-31</th>\n",
+       "      <td>83800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-30</th>\n",
+       "      <td>82500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-30</th>\n",
+       "      <td>80500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 시가\n",
+       "일자                 \n",
+       "2021-03-31  83800.0\n",
+       "2021-06-30  82500.0\n",
+       "2021-09-30  80500.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 코드를 실행한 결과 그림 6.6.4와 같은 127개의 시가와 종가를 확인할 수 있습니다. \n",
+    "# 2021년 1분기의 시가는 2021-02-15의 83800입니다. \n",
+    "# 1분기에 해당하는 1월부터 3월은 83800을 기준으로 상승률을 계산해야 합니다. \n",
+    "# 뿐만 아니라 2분기, 3분기, 4분기 각각의 시가와 비교해서 종가가 얼마만큼 상승했는지를 계산해야 합니다.\n",
+    "\n",
+    "# 시가 컬럼에 resample 메서드를 사용해서 분기(quarter) 별로 데이터를 샘플링합니다. \n",
+    "# 이때 샘플링된 각 그룹의 첫 번째 값을 선택하도록 first 메서드를 적용합니다. \n",
+    "# first 메서드를 호출한 결과는 시리즈인데 to_frame 메서드를 사용해서 데이터프레임으로 변경합니다.\n",
+    "\n",
+    "# [ 그림 6.6.5 ]\n",
+    "\n",
+    "df_quarter = df['시가'].resample('q').first().to_frame()\n",
+    "df_quarter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시가</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>일자</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-31</th>\n",
+       "      <td>83800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-30</th>\n",
+       "      <td>82500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-30</th>\n",
+       "      <td>80500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 시가\n",
+       "일자                 \n",
+       "2021-03-31  83800.0\n",
+       "2021-06-30  82500.0\n",
+       "2021-09-30  80500.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grouper 객체를 사용해서 분기별 데이터를 집계할 수도 있습니다.\n",
+    "df_quarter = df['시가'].groupby(pd.Grouper(freq='q')).first().to_frame()\n",
+    "df_quarter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 수익률을 계산하기 위해 그림 6.6.4와 그림 6.6.5를 '분기별'로 연결해야 합니다. \n",
+    "# 따라서 단순히 이어 붙이는 concat 보다는 merge를 사용해야 하며, 데이터프레임을 병합하기 위해 \n",
+    "# 기준이 되는 '분기' 컬럼을 각 데이터프레임에 추가해야 합니다.\n",
+    "\n",
+    "df_quarter['quarter'] = df_quarter.index.quarter\n",
+    "df['quarter'] = df.index.quarter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다음 코드는 필요한 데이터만을 슬라이싱해서 두 개의 데이터프레임을 병합합니다. \n",
+    "# merge 함수는 기본적으로 인덱스를 제외한 값만을 합치기 때문에 reset_index 메서드로 인덱스를 값으로 치환한 뒤에 \n",
+    "# merge합니다.\n",
+    "\n",
+    "df_daily = df[['종가', 'quarter']].reset_index()\n",
+    "r = pd.merge(left=df_daily, right=df_quarter, on='quarter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>종가</th>\n",
+       "      <th>시가</th>\n",
+       "      <th>수익률</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>quarter</th>\n",
+       "      <th>일자</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1</th>\n",
+       "      <th>2021-02-15</th>\n",
+       "      <td>84200.0</td>\n",
+       "      <td>83800.0</td>\n",
+       "      <td>1.004773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-16</th>\n",
+       "      <td>84900.0</td>\n",
+       "      <td>83800.0</td>\n",
+       "      <td>1.013126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-17</th>\n",
+       "      <td>83200.0</td>\n",
+       "      <td>83800.0</td>\n",
+       "      <td>0.992840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-18</th>\n",
+       "      <td>82100.0</td>\n",
+       "      <td>83800.0</td>\n",
+       "      <td>0.979714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-19</th>\n",
+       "      <td>82600.0</td>\n",
+       "      <td>83800.0</td>\n",
+       "      <td>0.985680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">3</th>\n",
+       "      <th>2021-08-09</th>\n",
+       "      <td>81500.0</td>\n",
+       "      <td>80500.0</td>\n",
+       "      <td>1.012422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-10</th>\n",
+       "      <td>80200.0</td>\n",
+       "      <td>80500.0</td>\n",
+       "      <td>0.996273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-11</th>\n",
+       "      <td>78500.0</td>\n",
+       "      <td>80500.0</td>\n",
+       "      <td>0.975155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-12</th>\n",
+       "      <td>77000.0</td>\n",
+       "      <td>80500.0</td>\n",
+       "      <td>0.956522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-13</th>\n",
+       "      <td>74400.0</td>\n",
+       "      <td>80500.0</td>\n",
+       "      <td>0.924224</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>127 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         종가       시가       수익률\n",
+       "quarter 일자                                    \n",
+       "1       2021-02-15  84200.0  83800.0  1.004773\n",
+       "        2021-02-16  84900.0  83800.0  1.013126\n",
+       "        2021-02-17  83200.0  83800.0  0.992840\n",
+       "        2021-02-18  82100.0  83800.0  0.979714\n",
+       "        2021-02-19  82600.0  83800.0  0.985680\n",
+       "...                     ...      ...       ...\n",
+       "3       2021-08-09  81500.0  80500.0  1.012422\n",
+       "        2021-08-10  80200.0  80500.0  0.996273\n",
+       "        2021-08-11  78500.0  80500.0  0.975155\n",
+       "        2021-08-12  77000.0  80500.0  0.956522\n",
+       "        2021-08-13  74400.0  80500.0  0.924224\n",
+       "\n",
+       "[127 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 다음 코드는 수익률을 계산하고 그림 6.6.8과 같이 멀티 인덱스로 데이터를 정리합니다.\n",
+    "\n",
+    "r['수익률'] = r['종가'] / r['시가']\n",
+    "r = r.set_index(['quarter','일자'])\n",
+    "r"
    ]
   },
   {
