20220330 Home Review Data Analysis

--- a/data_analysis/Python for Data Analysis(2nd Edition)/02 Python Language Basics, Ipython, and Jupyter Notebooks.ipynb
+++ b/data_analysis/Python for Data Analysis(2nd Edition)/02 Python Language Basics, Ipython, and Jupyter Notebooks.ipynb
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -779,16 +779,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'10/29/2011 20:30'"
+       "'2011/10/29 20:30:21'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,71 @@
    "source": [
     "# The strftime method formats a datetime as a string:\n",
     "\n",
-    "dt.strftime('%m/%d/%Y %H:%M')"
+    "dt.strftime('%Y/%m/%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2009, 10, 31, 0, 0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Strings can be converted (parsed) into datetime objects with the strptime function:\n",
+    "\n",
+    "datetime.strptime('20091031', '%Y%m%d')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2011, 10, 29, 20, 0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replacing the minute and second fields with zero:\n",
+    "\n",
+    "dt.replace(minute=0, second=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2011, 10, 29, 20, 30, 21)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt"
    ]
   },
   {
@@ -804,9 +868,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dt.strftime('%m/%d/%Y %H:%M')Out[108]: '10/29/2011 20:30'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -828,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
