20220331 Home Review Data Analysis

--- a/data_analysis/Python for Data Analysis(2nd Edition)/03 Built-in Data Structures, Functions, and Files.ipynb
+++ b/data_analysis/Python for Data Analysis(2nd Edition)/03 Built-in Data Structures, Functions, and Files.ipynb
@@ -2654,7 +2654,285 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generators"
+    "### Generators\n",
+    "\n",
+    "Having a consistent way to iterate over sequences, like objects in a list or lines in a\n",
+    "file, is an important Python feature. This is accomplished by means of the iterator\n",
+    "protocol, a generic way to make objects iterable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_dict = {'a': 1, 'b': 2, 'c': 3}\n",
+    "\n",
+    "for key in some_dict:\n",
+    "    print(key)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating squares from 1 to 100\n",
+      "1 4 9 16 25 36 49 64 81 100 "
+     ]
+    }
+   ],
+   "source": [
+    "def squares(n=10):\n",
+    "    print('Generating squares from 1 to {0}'.format(n ** 2))\n",
+    "    for i in range(1, n + 1):\n",
+    "        yield i ** 2\n",
+    "\n",
+    "gen = squares()\n",
+    "for x in gen:\n",
+    "    print(x, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generator expressions\n",
+    "\n",
+    "Another even more concise way to make a generator is by using a generator expres‐\n",
+    "sion. This is a generator analogue to list, dict, and set comprehensions; to create one,\n",
+    "enclose what would otherwise be a list comprehension within parentheses instead of\n",
+    "brackets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x0000019CBDD924A0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen = (x ** 2 for x in range(100))\n",
+    "gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object _make_gen at 0x0000019CBD36A900>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is completely equivalent to the following more verbose generator:\n",
+    "\n",
+    "def _make_gen():\n",
+    "    for x in range(100):\n",
+    "        yield x ** 2\n",
+    "gen = _make_gen()\n",
+    "gen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "328350"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generator expressions can be used instead of list comprehensions as function arguments in many cases:\n",
+    "\n",
+    "sum(x ** 2 for x in range(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict((i, i **2) for i in range(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### itertools module\n",
+    "\n",
+    "The standard library itertools module has a collection of generators for many com‐\n",
+    "mon data algorithms. For example, groupby takes any sequence and a function,\n",
+    "grouping consecutive elements in the sequence by return value of the function. Here’s\n",
+    "an example:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "first_letter = lambda x: x[0]\n",
+    " \n",
+    "names = ['Alan', 'Adam', 'Wes', 'Will', 'Albert', 'Steven']\n",
+    "  \n",
+    "for letter, names in itertools.groupby(names, first_letter):\n",
+    "    print(letter, list(names)) # names is a generator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Errors and Exception Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0\n",
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "def attempt_float(x):\n",
+    "    try:\n",
+    "        return float(x)\n",
+    "    except:\n",
+    "        return x\n",
+    "    \n",
+    "res = attempt_float(15)\n",
+    "print(res)\n",
+    "\n",
+    "res = attempt_float('test')\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.3 Files and the Operating System\n",
+    "\n",
+    "Most of this book uses high-level tools like pandas.read_csv to read data files from\n",
+    "disk into Python data structures. However, it’s important to understand the basics of\n",
+    "how to work with files in Python. Fortunately, it’s very simple, which is one reason\n",
+    "why Python is so popular for text and file munging."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sueña el rico en su riqueza,', 'que más cuidados le ofrece;', '', 'sueña el pobre que padece', 'su miseria y su pobreza;', '', 'sueña el que a medrar empieza,', 'sueña el que afana y pretende,', 'sueña el que agravia y ofende,', '', 'y en el mundo, en conclusión,', 'todos sueñan lo que son,', 'aunque ninguno lo entiende.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The lines come out of the file with the end-of-line (EOL) markers intact, so you’ll \n",
+    "# often see code to get an EOL-free list of lines in a file like:\n",
+    "\n",
+    "path = 'examples/segismundo.txt'\n",
+    "f = open(path)\n",
+    " \n",
+    "result = [ x.rstrip() for x in open(path) ]\n",
+    "print(result)\n",
+    "\n",
+    "# When you use open to create file objects, it is important to explicitly close the file\n",
+    "# when you are finished with it. Closing the file releases its resources back to the oper‐\n",
+    "# ating system:\n",
+    "\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sueña el rico en su riqueza,', 'que más cuidados le ofrece;', '', 'sueña el pobre que padece', 'su miseria y su pobreza;', '', 'sueña el que a medrar empieza,', 'sueña el que afana y pretende,', 'sueña el que agravia y ofende,', '', 'y en el mundo, en conclusión,', 'todos sueñan lo que son,', 'aunque ninguno lo entiende.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# One of the ways to make it easier to clean up open files is to use the with statement:\n",
+    "with open(path) as f: \n",
+    "    lines = [x.rstrip() for x in f]\n",
+    "\n",
+    "print(lines)\n"
    ]
   },
   {
@@ -2684,7 +2962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
